update swagger.json through npm swagger.
